--- a/README.rdoc
+++ b/README.rdoc
@@ -3,26 +3,10 @@
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
-Things you may want to cover:
+Token endpoint -> localhost:3000/auth/token with application/x-www-form-urlencoded -> email and password
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
+Authorization:
+	Header attribute -> Authorization: Token token=a47a8e54b11c4de5a4a351734c80a14a
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
